--- a/Day-11/todo_mvc/index.html
+++ b/Day-11/todo_mvc/index.html
@@ -17,10 +17,10 @@
 
 
 		<footer class="footer">
-			<span>0 item left</span>
+			<span class="counting"></span>
 			<span class="style_all">All</span>
-			<span class="style_active">Active</span>
-			<span class="style_completed">Completed</span>
+			<span class="style_active border">Active</span>
+			<span class="style_completed border">Completed</span>
 			<a href="" class="anchor">clear completed</a>
 
 		</footer>
