--- a/Day-11/todo_mvc/index.html
+++ b/Day-11/todo_mvc/index.html
@@ -13,7 +13,9 @@
 			<form class="addItems">
 				<input type="text" class="todo-text" placeholder="What needs to be done?">
 			</form>
-			<ul class="todo-mvc"></ul>
+			<ul class="todo-mvc">
+
+			</ul>
 
 
 		<footer class="footer">
@@ -25,19 +27,7 @@
 
 		</footer>
 		</div>
-
-
 	</div>
-
-
-
-	<!-- 	<footer class="info">
-			<p>Double-click to edit a todo</p>
-			<p>Created by <a href="http://twitter.com/oscargodson">Oscar Godson</a></p>
-			<p>Refactored by <a href="https://github.com/cburgmer">Christoph Burgmer</a></p>
-			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-		</footer> -->
-	
 <script src="main.js"></script>
 </body>
 </html>
