--- a/quizgame/index.html
+++ b/quizgame/index.html
@@ -10,6 +10,7 @@
 	<div class="question"></div>
 	<ul class="ullist"></ul>
 	<div class="paragraph"></div>
+	<!-- <img src="image/Whats.jpeg"> -->
 	</div>
 	
 	<button class='btnstart'>Science Quiz</button>
