--- a/memoryGame/index.html
+++ b/memoryGame/index.html
@@ -6,11 +6,14 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 <body>
+		<h1>Memory Game</h1>
+	<div class="contain">
+
+	</div>
 
 	<div class="main-container">
 	
 	</div>
-
 
 
 	<script type="text/javascript" src="main.js"></script>
