added timer in memorygame

--- a/memoryGame/index.html
+++ b/memoryGame/index.html
@@ -6,14 +6,32 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 <body>
+
+<!-- 	<div class="triangle-container">
+   <div class="triangle first"></div>
+   <div class="triangle second"></div>
+  </div> --> 
+
+<!-- <center>
+<div id="box">
+	<div id="trans6" class="transition">
+	    <p id="text">6</p>
+	  <div id="six" class="subtransition"></div>
+	</div>
+</div>
+<center> -->
+  
+
 		<h1>Memory Game</h1>
-	<div class="contain">
+	<div class="container">
+		<!-- <span class="contain"></span> -->
+		<div class="timer">0 minute 0 second</div>
 
 	</div>
-
+<center>
 	<div class="main-container">
-	
 	</div>
+<center>
 
 
 	<script type="text/javascript" src="main.js"></script>
